[package]
name = "xtra_productivity"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[features]
tracing = []

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
async-trait = "0.1"
trybuild = "1"
xtra = "0.6"

[patch.crates-io]
xtra = { git = "https://github.com/Restioson/xtra" } # Latest master has crucial patches.
